# papyrix-reader

./: CHANGELOG.md  Makefile  README.md  USER_GUIDE.md  platformio.ini  pyproject.toml
docs/: architecture.md  customization.md  device-specifications.md  example.theme  file-formats.md  user_guide.md
docs/examples/: light-cjk-external.theme  light-noto-sans-kr.theme  light-noto-sans-sc.theme  light-thai.theme  light-vietnamese.theme
lib/Epub/: Epub.cpp  Epub.h
lib/ExternalFont/: ExternalFont.cpp  ExternalFont.h
lib/GfxRenderer/: BitmapHelpers.cpp  CoverHelpers.cpp  CoverHelpers.h  GfxRenderer.cpp  GfxRenderer.h
lib/Group5/: Group5.h
lib/Html5/: Html5Normalizer.cpp
lib/Markdown/: Markdown.cpp  Markdown.h  MarkdownParser.cpp  MarkdownParser.h
lib/PageCache/: ContentParser.h  EpubChapterParser.cpp  EpubChapterParser.h  PageCache.cpp  PageCache.h  PlainTextParser.cpp  PlainTextParser.h
lib/PngToBmpConverter/: PngToBmpConverter.cpp
lib/ScriptDetector/: ScriptDetector.cpp  ScriptDetector.h
lib/Xtc/: Xtc.cpp
lib/ZipFile/: ZipFile.cpp
scripts/: convert-fonts.mjs  convert_logo.py  convert_theme_fonts.py
src/: CrossPointSettings.cpp  CrossPointSettings.h  FontManager.cpp  FontManager.h  IniParser.cpp  IniParser.h  MappedInputManager.cpp  MappedInputManager.h  ScreenComponents.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h  config.h  main.cpp
src/content/: ContentHandle.cpp  ContentHandle.h  ContentTypes.cpp  MarkdownProvider.cpp  MarkdownProvider.h  ProgressManager.cpp  ProgressManager.h  XtcProvider.cpp  XtcProvider.h
src/core/: BootMode.cpp  Core.h  (+10 more)
(+123 files in other folders)
